- desk/deskinf.c: Added some warning comments re SFCB. (RFB)
- desk/deskapp.c: Eliminated duplicate desktop data that already exists
  in the built-in resource. (RFB)

2012-05-01
- vdi/vdi_defs.h vdi/vdi_gdp.c vdi/vdi_line.c: Fix bug: arrows are now
  drawn correctly for thin line arcs/ellarcs. (RFB)
- vdi/vdi_defs.h vdi/vdi_gdp.c vdi/vdi_line.c: Replace common code to
  set LN_MASK with subroutine. (RFB)
- vdi/vdi_gdp.c: Fix bug: line styles are now used for thin line arcs
  and ellarcs. (RFB)

2012-05-02
- vdi/vdi_line.c: Fix bug: arrows are now drawn correctly for all arcs
  and ellarcs. (RFB)

2012-05-03
- vdi/vdi_col.c vdi/vdi_fill.c: Fix bug: v_get_pixel() did not return the
  VDI colour index correctly in all cases. (RFB)

2012-05-08
- bios/country.c: Fix wrong keyboard layout read from the NVRAM. (VRI)
- country.mk bios/country.h bios/keyb_uk.h: New UK country and keyboard layout.
  Contributed by David Savinkoff. (VRI)
- bios/screen.c: Fix bug: can't change to ST resolutions after booting
  with videl in VGA 50Hz mode. (RFB)

2012-05-09
- country.mk: Fix UK date format. Contributed by David Savinkoff. (VRI)
- Makefile: Remove useless #ifdef in include/i18nconf.h. (VRI)
- country.mk tools/mkheader.awk: Move COUNTRY existence test. (VRI)
- country.mk Makefile: Move country configuration sanity checks. (VRI)
- Makefile: Add correct echo quoting. (VRI)
- country.mk Makefile bios/country.c: Use the country-specific IDT settings in
  UNIQUE builds. (VRI)
- Makefile include/nls.h tools/bug.c util/nls.c util/nlsasm.S: Replaced
  CONF_NO_NLS by !CONF_WITH_NLS. (VRI)
- bios/bios.c include/nls.h util/nls.c: Removed all NLS functions when
  !CONF_WITH_NLS. (VRI)
- bios/country.c bios/country.h bios/machine.c: Rework the AKP/IDT detection
  algorithm. (VRI)

2012-05-10
- bios/country.h desk/deskapp.c desk/deskinf.c: Use the IDT date ordering in
  the default desktop. (VRI)
- desk/deskapp.c: Use the IDT time format in the default desktop. (VRI)